--- a/Ejemplo/index2.html
+++ b/Ejemplo/index2.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        Cabecera
+    </div>
     <h1>Blog</h1>
     <p>Parrafo de inicio</p>
     <p>Pruebas de ramas</p>
