--- a/Ejemplo/index2.html
+++ b/Ejemplo/index2.html
@@ -11,5 +11,6 @@
     <h1>Blog</h1>
     <p>Parrafo de inicio</p>
     <p>Pruebas de ramas</p>
+    <p>Esta es la rama de master</p>
 </body>
 </html>
