--- a/Ejemplo/index2.html
+++ b/Ejemplo/index2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="cabecera">
-        Cabecera
+        Bienvenido a el blog
     </div>
     <h1>Blog</h1>
     <p>Parrafo de inicio</p>
