--- a/Ejemplo/index2.html
+++ b/Ejemplo/index2.html
@@ -12,8 +12,6 @@
         Bienvenido a el blog
     </div>
     <h1>Blog</h1>
-    <p>Parrafo de inicio</p>
-    <p>Pruebas de ramas</p>
-    <p>Esta es la rama de master</p>
+    <p>Fernanda Garcia Suarez</p>
 </body>
 </html>
